hard-gists/2902213/run.log
=== Docker Run Log for 2902213 ===
Started at: Mi 29. Okt 13:20:52 CET 2025

[2025-10-29 13:20:52] START: Running container for 2902213
[2025-10-29 13:20:53] SUCCESS: Container 23df89e0f08802215468c9838d5ec99146b3c30efcc6f2a0a3b9e179d8a0c11b started for 2902213
=== Container logs for 2902213 ===
  File "/snippet.py", line 39
    print "waitpid: interrupted exception"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2902213 ===
[2025-10-29 13:20:55] INFO: Container 23df89e0f08802215468c9838d5ec99146b3c30efcc6f2a0a3b9e179d8a0c11b has stopped
